# texsmart

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md  readme.txt
build.vs/projects/: matching_cpp_example1.vcxproj.filters  nlu_c_example1.vcxproj  nlu_c_example1.vcxproj.filters  nlu_cpp_example1.vcxproj.filters  nlu_cpp_example2.vcxproj.filters
cli/: analyze.cr  analyze_all.cr  analyze_contrib.cr  analyzer.cr  analyzer_offline.cr  analyzer_online.cr  analyzer_online_2.cr  analyzer_online_ner_only.cr
data/: readme.md
doc/: readme.txt
examples/c_cpp/: matching_cpp_example1.cc  nlu_cpp_example1.cc  nlu_cpp_example2.cc
examples/c_cpp/build.vs/: examples.sln
examples/c_cpp/build.vs/projects/: matching_cpp_example1.vcxproj  nlu_cpp_example1.vcxproj  nlu_cpp_example2.vcxproj
examples/java/: .classpath  .project  readme.md
examples/java/src/: ChsMatchingExample1.java  ChsNluExample1.java  ChsNluExample2.java
examples/python/: chs_matching_example1.py  chs_nlu_example1.py  chs_nlu_example2.py  readme.md
include/: texsmart_nlu_api.h  texsmart_util.h
lib/: libtencent_ai_texsmart.dylib  tencent_ai_texsmart.lib  tencent_ai_texsmart.py
src/: CMakeLists.txt  export.cr  libtexsmart.cr  matching_cpp_example1.cc  nlu_c_example1.c  nlu_cpp_example1.cc  nlu_cpp_example2.cc  texsmart.cc  texsmart.cr
tasks/: export_ner_entties.cr  extract_all.cr  extract_common_words.cr
test/: sample.cr
